Corrects nav alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,7 @@ body {
 .full-width {
   margin: auto;
   overflow: auto;
-  width: 1250px
-}
-
-.half-width {
-  float: left;
-  width: 600px;
+  width: 1240px
 }
 
 .third-width {
@@ -30,13 +25,13 @@ header {
   color: #77a466;
   height: 110px;
   margin: 0 auto;
-  text-transform: uppercase;
 }
 
 header h1 {
   font-size: 30px;
   font-weight: bold;
   padding: 20px 0 40px;
+  text-transform: uppercase;
 }
 
 header h1 span {
@@ -45,7 +40,7 @@ header h1 span {
 
 header nav {
   float: right;
-  padding: 40px 0 20px;
+  padding: 50px 0;
 }
 
 header nav ul {
@@ -56,8 +51,9 @@ header nav ul {
 header nav li {
   display: inline-block;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 14pt;
   padding:0 10px;
+  text-transform: uppercase;
 
 }
 
